test: mypyでローカルでも型チェックを行えるように

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.9"
 opencv-python = "^4.10.0.84"
+mypy = "^1.11.2"
 
 
 [build-system]
