--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -1,6 +1,8 @@
 name: Check code quality
 on:
   pull_request:
+    branches:
+      - main
 
 jobs:
   check-flake8:
@@ -22,3 +24,24 @@ jobs:
       - name: Run flake8
         run: |
           flake8 .
+
+  check-mypy:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Check out the repository
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.12.6'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install mypy
+
+    - name: Run MyPy
+      run: |
+        mypy . --strict --ignore-missing-imports --explicit-package-bases
